# ModernTaskManager

./: .gitignore  CMakeLists.txt  Planning.md  buildAndPrint.sh  compile_commands.json
.cache/clangd/index/: Exception.hpp.9F80F3E41E729C35.idx  LogTrace.cpp.19E3B4F04DBE827D.idx  LogTrace.hpp.7F532F31553118EA.idx  ProcessInfo.cpp.7AB9EE70B596BE50.idx  ProcessInfo.hpp.061D32AAB71692F7.idx  ProcessInfoTest.cpp.365D44C90615069E.idx  main.cpp.33E9702F7471D149.idx  main.cpp.4D09091B05875863.idx
export/: ProcessesStatus.txt
include/proc/: Cli.hpp  ExportedFileWrapper.hpp  ProcessInfo.hpp
include/utils/: Exception.hpp  LogTrace.hpp  Validator.hpp
src/: main.cpp
src/proc/: Cli.cpp  ExportedFileWrapper.cpp  ProcessInfo.cpp
src/utils/: LogTrace.cpp  Validator.cpp
test/data/ExportedFileWrapper/: dummyExportedFile.txt  dummyExportedFileOnePid.txt  dummyExportedFivePids.txt
test/data/simulateProc/export/: ProcessesStatusToCompare.txt
test/data/simulateProc/proc/: meminfo  uptime
test/data/simulateProc/proc/666/: stat
test/data/validationInput/: correctLine.txt  errorLineCpu.txt  errorLineMemory.txt  errorLineThreads.txt  errorLineTime.txt
test/proc/: ExportedFileWrapperTest.cpp  ProcessInfoTest.cpp
test/utils/: ValidatorTest.cpp
